--- a/public/templates/admin/report.html
+++ b/public/templates/admin/report.html
@@ -99,9 +99,9 @@
     
     $(function () {
         showReports();
-        setInterval(function(){
-            init();
-        },3000)
+        // setInterval(function(){
+        //     init();
+        // },3000)
 
         $("#datetimeStart").datetimepicker({
             format:'yyyy-mm-dd hh:ii',
