--- a/public/templates/admin/report.html
+++ b/public/templates/admin/report.html
@@ -211,21 +211,27 @@
         var multipleWarehouse = 0; //多仓
         var shortPosition = 0; //空仓
         var _symbolAmounts = [];// { site: "",symbol: "",amount: 234,avavgPrice: 123, plusAmount: 1,minusAmount: -1 }
+        
         for(var i = 0,l =_bargainAmountSum.length; i< l ;i++){
 
             amount = (_bargainAmountSum[i]._id.side=="buy"?_bargainAmountSum[i].bargainAmount:-_bargainAmountSum[i].bargainAmount);
 
-            middle = _bargainAmountSum[i].total;
+            middle = _bargainAmountSum[i].total/_bargainAmountSum[i].sum;
 
             var symbolItem = getItem(_bargainAmountSum[i]._id.site,_bargainAmountSum[i]._id.symbol,_symbolAmounts); 
             symbolItem.amount += amount;
+
+            middle = (_bargainAmountSum[i]._id.side=="buy"?middle:-middle);
+
             symbolItem.middle += middle;
+            
 
             if(amount > 0 ){
                 symbolItem.multipleWarehouse += amount;
             } else{ 
                 symbolItem.shortPosition += amount;
             }
+
             
         }
 
@@ -255,31 +261,34 @@
                     amount += _symbolAmounts[j].amount;
                     multipleWarehouse += _symbolAmounts[j].multipleWarehouse;
                     shortPosition +=  _symbolAmounts[j].shortPosition;
-                    profit -=  _symbolAmounts[j].middle;
+                    profit -=  _symbolAmounts[j].middle; 
+                    
+                    var min = (Math.min(Math.abs(multipleWarehouse),Math.abs(shortPosition))) * profit;
 
                     result[arr[i]].amount = amount;
                     result[arr[i]].multipleWarehouse = multipleWarehouse;
                     result[arr[i]].shortPosition = shortPosition;
-                    result[arr[i]].profit = profit;
+                    result[arr[i]].profit = min;
                     result[arr[i]].data.push(_symbolAmounts[j]);
                 }
+
                 
             }
            
         }
         
         var source = [];
-        source.push('<tr><th>币种</th><th>交易网站</th><th colspan="3">数量</th></tr>');
+        // source.push('<tr><th>币种</th><th>交易网站</th><th colspan="3">数量</th></tr>');
         for(var key in result ){
 
-             //result[key].profit需要正数转负数
+            
             for(var i = 0; i<result[key].data.length;i++){
                 source.push('<tr>');
                 if(i == 0){
-                    source.push(w.format('<td rowspan="{0}">{1}<br/>总利润：{2}</td>',result[key].data.length,key,w.toDecimal(Math.abs(result[key].profit || 0),2)));
+                    source.push(w.format('<td rowspan="{0}">{1}<br/>总利润：{2}</td>',result[key].data.length,key,w.toDecimal((result[key].profit || 0),2)));
                 } 
                 source.push(w.format('<td>{0}</td><td><span>建仓：</span>{1}</td><td><span>多仓：</span>{2}</td><td><span>空仓：</span>{3}</td>',
-                    result[key].data[i].site,w.toDecimal(Math.abs(result[key].data[i].amount || 0),2),w.toDecimal(Math.abs(result[key].data[i].multipleWarehouse || 0),2),w.toDecimal(Math.abs(result[key].data[i].shortPosition || 0),2)));
+                    result[key].data[i].site,w.toDecimal((result[key].data[i].amount || 0),2),w.toDecimal((result[key].data[i].multipleWarehouse || 0),2),w.toDecimal((result[key].data[i].shortPosition || 0),2)));
                 source.push('</tr>');
             }
         }
