--- a/public/templates/admin/trade.html
+++ b/public/templates/admin/trade.html
@@ -279,9 +279,12 @@
         
         var amount; //总成交量
         var middle = 0; //总价
+
+        var avgPrice = 0;//均价
+
         var multipleWarehouse = 0; //多仓
         var shortPosition = 0; //空仓
-        var _symbolAmounts = [];// { site: "",symbol: "",amount: 234,avavgPrice: 123, plusAmount: 1,minusAmount: -1 }
+        var _symbolAmounts = [];// { site: "",symbol: "",amount: 234, plusAmount: 1,minusAmount: -1 }
         
         for(var i = 0,l =_bargainAmountSum.length; i< l ;i++){
 
@@ -295,7 +298,7 @@
             middle = (_bargainAmountSum[i]._id.side=="buy"?middle:-middle);
 
             symbolItem.middle += middle;
-            
+
 
             if(amount > 0 ){
                 symbolItem.multipleWarehouse += amount;
@@ -317,6 +320,7 @@
         for (var i = 0; i < arr.length; i++) {
             var amount = 0;
             var profit = 0;
+
             var multipleWarehouse = 0;
             var shortPosition =0;
             result[arr[i]] = {
@@ -333,13 +337,14 @@
                     multipleWarehouse += _symbolAmounts[j].multipleWarehouse;
                     shortPosition +=  _symbolAmounts[j].shortPosition;
                     profit -=  _symbolAmounts[j].middle; 
-                    var a =(Math.min(Math.abs(multipleWarehouse),Math.abs(shortPosition)));
+
                     var min = (Math.min(Math.abs(multipleWarehouse),Math.abs(shortPosition))) * profit;
 
                     result[arr[i]].amount = amount;
                     result[arr[i]].multipleWarehouse = multipleWarehouse;
                     result[arr[i]].shortPosition = shortPosition;
                     result[arr[i]].profit = min;
+
                     result[arr[i]].data.push(_symbolAmounts[j]);
                 }
 
@@ -350,21 +355,33 @@
         
         var source = [];
         var sum = 0;
-        // source.push('<tr><th>币种</th><th>交易网站</th><th colspan="3">数量</th></tr>');
+        var duojj = 0;
+        var kongjj =0;
         for(var key in result ){
 
             
             for(var i = 0; i<result[key].data.length;i++){
-                
-                source.push('<tr>');
-                if(i == 0){
-                    source.push(w.format('<td rowspan="{0}">{1}<br/>总利润：{2}，总建仓：{3}</td>',result[key].data.length,key,w.toDecimal((result[key].profit || 0),2),result[key].amount));
+                for(var j = 0; j< _bargainAmountSum.length;j++){
+                    if(result[key].data[i].site ==_bargainAmountSum[j]._id.site){
+                        if(_bargainAmountSum[j]._id.side == "buy"){
+                           duojj = _bargainAmountSum[j].total/_bargainAmountSum[j].sum
+                        }else{
+                            kongjj = _bargainAmountSum[j].total/_bargainAmountSum[j].sum
+                        }
+                    }
                 }
-            
-
-                source.push(w.format('<td>{0}</td><td><span>建仓：</span>{1}</td><td><span>多仓：</span>{2}</td><td><span>空仓：</span>{3}</td><td><span>均价：</span>{4}</td>',
-                    result[key].data[i].site,w.toDecimal((result[key].data[i].amount || 0),2),w.toDecimal((result[key].data[i].multipleWarehouse || 0),2),w.toDecimal((result[key].data[i].shortPosition || 0),2),w.toDecimal((result[key].data[i].middle || 0),2)));
-                source.push('</tr>');
+                        source.push('<tr>');
+                        if(i == 0){
+                            
+                            source.push(w.format('<td rowspan="{0}">{1}<br/>总利润：{2}，总建仓：{3}</td>',result[key].data.length,key,w.toDecimal((result[key].profit || 0),2),w.toDecimal((result[key].amount || 0),2)));
+                        }
+                    
+                        
+                        source.push(w.format('<td>{0}</td><td><span>建仓：</span>{1}</td><td><span>多仓：</span>{2}<br/><span>均价：</span>{4}</td><td><span>空仓：</span>{3}<br/><span>均价：</span>{5}</td>',       
+                            result[key].data[i].site,w.toDecimal((result[key].data[i].amount || 0),2),w.toDecimal((result[key].data[i].multipleWarehouse || 0),2),w.toDecimal((result[key].data[i].shortPosition || 0),2),duojj,kongjj));//<td><span>均价：</span>{4}</td>   ,w.toDecimal((result[key].data[i].middle || 0),2)
+                        source.push('</tr>');
+                    
+                
             }
         }
         $('#report').html(source.join('')); 
@@ -494,7 +511,7 @@
         }
 
         if(!t){
-            t = { site:site, symbol:coinsPair, amount: 0, middle: 0, multipleWarehouse: 0, shortPosition: 0 } //profit: 0,
+            t = { site:site, symbol:coinsPair, amount: 0, middle: 0,multipleWarehouse: 0, shortPosition: 0 } //profit: 0,
             _symbolAmounts.push(t);
         }
         return t;  
