--- a/public/templates/admin/trade.html
+++ b/public/templates/admin/trade.html
@@ -280,11 +280,13 @@
         var amount; //总成交量
         var middle = 0; //总价
 
-        var avgPrice = 0;//均价
+        //var avgPrice = 0;//均价
 
         var multipleWarehouse = 0; //多仓
         var shortPosition = 0; //空仓
         var _symbolAmounts = [];// { site: "",symbol: "",amount: 234, plusAmount: 1,minusAmount: -1 }
+
+       
         
         for(var i = 0,l =_bargainAmountSum.length; i< l ;i++){
 
@@ -292,22 +294,28 @@
 
             middle = _bargainAmountSum[i].total/_bargainAmountSum[i].sum;
 
+            middle = (_bargainAmountSum[i]._id.side=="buy"?middle:-middle);
+
             var symbolItem = getItem(_bargainAmountSum[i]._id.site,_bargainAmountSum[i]._id.symbol,_symbolAmounts); 
             symbolItem.amount += amount;
 
-            middle = (_bargainAmountSum[i]._id.side=="buy"?middle:-middle);
+            //middle = _bargainAmountSum[i].total/_bargainAmountSum[i].sum;
 
             symbolItem.middle += middle;
 
 
             if(amount > 0 ){
                 symbolItem.multipleWarehouse += amount;
+                // symbolItem.total/_bargainAmountSum[j].sum
             } else{ 
                 symbolItem.shortPosition += amount;
             }
 
             
         }
+
+        console.log(symbolItem);
+        console.log(_symbolAmounts);
 
         var arr= [];
         var result = {}; 
@@ -355,18 +363,23 @@
         
         var source = [];
         var sum = 0;
+
         var duojj = 0;
         var kongjj =0;
+        
         for(var key in result ){
 
             
             for(var i = 0; i<result[key].data.length;i++){
                 for(var j = 0; j< _bargainAmountSum.length;j++){
-                    if(result[key].data[i].site ==_bargainAmountSum[j]._id.site){
-                        if(_bargainAmountSum[j]._id.side == "buy"){
-                           duojj = _bargainAmountSum[j].total/_bargainAmountSum[j].sum
-                        }else{
-                            kongjj = _bargainAmountSum[j].total/_bargainAmountSum[j].sum
+                    if(result[key].data[i].symbol == _bargainAmountSum[j]._id.symbol){
+                        if(result[key].data[i].site == _bargainAmountSum[j]._id.site){
+                            if(_bargainAmountSum[j]._id.side == "buy"){
+                                duojj = _bargainAmountSum[j].total/_bargainAmountSum[j].sum
+                            }
+                            if(_bargainAmountSum[j]._id.side == "sell"){
+                                kongjj = _bargainAmountSum[j].total/_bargainAmountSum[j].sum
+                            }
                         }
                     }
                 }
@@ -462,10 +475,10 @@
                     {"cellHtml": order.created ? w.dateformat(new Date(order.created),"yyyy-MM-dd hh:mm:ss") : ''},
                     {"cellHtml": order.type},
                     {"cellHtml": side},
-                    {"cellHtml": w.toDecimal((order.amount || 0),4) },
+                    {"cellHtml": w.toDecimal((order.amount || 0),2) },
                     {"cellHtml": order.price },
-                    {"cellHtml": w.toDecimal((order.bargainAmount || 0),4) },
-                    {"cellHtml": w.toDecimal((order.avgPrice || 0),3) },
+                    {"cellHtml": w.toDecimal((order.bargainAmount || 0),2) },
+                    {"cellHtml": w.toDecimal((order.avgPrice || 0),2) },
                     {"cellHtml": order.status }
                 ]
             };
