--- a/public/templates/admin/trade.html
+++ b/public/templates/admin/trade.html
@@ -278,41 +278,36 @@
     function showReports(){
         
         var amount; //总成交量
-        var middle = 0; //均价
+        var avgPrice = 0; //均价
 
         //var avgPrice = 0;//
 
         var multipleWarehouse = 0; //多仓
         var shortPosition = 0; //空仓
-        var _symbolAmounts = [];// { site:site, symbol:coinsPair, amount: 0, middle: 0,multipleWarehouse: 0, shortPosition: 0 ,duojj:0,kongjj:0}
+        var _symbolAmounts = [];// { site:site, symbol:coinsPair, amount: 0, avgPrice: 0,multipleWarehouse: 0, shortPosition: 0, multipleAvg: 0, shortAvg: 0}
 
-        var duojj = 0;
-        var kongjj = 0; 
+        var multipleAvg = 0;
+        var shortAvg = 0;
         
         for(var i = 0,l =_bargainAmountSum.length; i< l ;i++){
 
             amount = (_bargainAmountSum[i]._id.side=="buy"?_bargainAmountSum[i].bargainAmount:-_bargainAmountSum[i].bargainAmount);
             
             //total总价 / sum数量
-            middle = _bargainAmountSum[i].total/_bargainAmountSum[i].sum;
+            avgPrice = _bargainAmountSum[i].total/_bargainAmountSum[i].sum;
 
             var symbolItem = getItem(_bargainAmountSum[i]._id.site,_bargainAmountSum[i]._id.symbol,_symbolAmounts); 
             symbolItem.amount += amount;
 
-
-            symbolItem.middle = (_bargainAmountSum[i]._id.side=="buy"?middle:-middle);
-            
-
+            symbolItem.avgPrice = (_bargainAmountSum[i]._id.side=="buy"?avgPrice:-avgPrice);
 
             if(amount > 0 ){
                 symbolItem.multipleWarehouse += amount;
-                symbolItem.duojj = middle;
+                symbolItem.multipleAvg = avgPrice;
             } else { 
                 symbolItem.shortPosition += amount;
-                symbolItem.kongjj = middle;
+                symbolItem.shortAvg = avgPrice;
             }
-
-            
         }
 
         var arr= [];
@@ -331,11 +326,11 @@
             var shortPosition =0;
 
             result[arr[i]] = {
-                    amount: 0,
-                    multipleWarehouse : 0,
-                    shortPosition : 0,
-                    profit : 0,
-                    data : []
+                amount: 0,
+                multipleWarehouse : 0,
+                shortPosition : 0,
+                profit : 0,
+                data : []
             };
             
             for (var j = 0; j < _symbolAmounts.length; j++) {
@@ -343,12 +338,11 @@
                     amount += _symbolAmounts[j].amount;
                     multipleWarehouse += _symbolAmounts[j].multipleWarehouse;
                     shortPosition +=  _symbolAmounts[j].shortPosition;
-                    profit +=  _symbolAmounts[j].middle; 
+                    profit +=  _symbolAmounts[j].avgPrice; 
 
                     var min = 0;
                     
                         min = (Math.min(Math.abs(multipleWarehouse),Math.abs(shortPosition))) * profit;
-                    
 
                     result[arr[i]].amount = amount;
                     result[arr[i]].multipleWarehouse = multipleWarehouse;
@@ -357,10 +351,7 @@
 
                     result[arr[i]].data.push(_symbolAmounts[j]);
                 }
-
-                
-            }
-           
+            }         
         }
         
         var source = [];
@@ -368,33 +359,15 @@
         
         for(var key in result ){
 
-            
             for(var i = 0; i<result[key].data.length;i++){
-                // for(var j = 0; j< _bargainAmountSum.length;j++){
-                //     if(result[key].data[i].symbol == _bargainAmountSum[j]._id.symbol){
-                //         if(result[key].data[i].site == _bargainAmountSum[j]._id.site){
-                //             if(result[key].multipleWarehouse !=0 && result[key].shortPosition !=0){
-                //                 if(_bargainAmountSum[j]._id.side == "buy"){
-                //                     duojj = _bargainAmountSum[j].total/_bargainAmountSum[j].sum
-                //                 }else{
-                //                     kongjj = _bargainAmountSum[j].total/_bargainAmountSum[j].sum
-                //                 }
-                //             }
-                //         }
-                //     }
-                // }
-                        source.push('<tr>');
-                        if(i == 0){
-                            
-                            source.push(w.format('<td rowspan="{0}">{1}<br/>总利润：{2}，总建仓：{3}</td>',result[key].data.length,key,w.toDecimal((result[key].profit || 0),3),w.toDecimal((result[key].amount || 0),3)));
-                        }
-                    
-                        
-                        source.push(w.format('<td>{0}</td><td><span>建仓：</span>{1}</td><td><span>多仓：</span>{2}<br/><span>均价：</span>{4}</td><td><span>空仓：</span>{3}<br/><span>均价：</span>{5}</td>',       
-                            result[key].data[i].site,w.toDecimal((result[key].data[i].amount || 0),3),w.toDecimal((result[key].data[i].multipleWarehouse || 0),3),w.toDecimal((result[key].data[i].shortPosition || 0),3),w.toDecimal((result[key].data[i].duojj || 0),3),w.toDecimal((result[key].data[i].kongjj || 0),3)));//<td><span>均价：</span>{4}</td>   ,w.toDecimal((result[key].data[i].middle || 0),2)
-                        source.push('</tr>');
-                    
-                
+                source.push('<tr>');
+                if(i == 0){
+                    source.push(w.format('<td rowspan="{0}">{1}<br/>总利润：{2}，总建仓：{3}</td>',result[key].data.length,key,w.toDecimal((result[key].profit || 0),3),w.toDecimal((result[key].amount || 0),3)));
+                }
+            
+                source.push(w.format('<td>{0}</td><td><span>建仓：</span>{1}</td><td><span>多仓：</span>{2}<br/><span>均价：</span>{4}</td><td><span>空仓：</span>{3}<br/><span>均价：</span>{5}</td>',       
+                    result[key].data[i].site,w.toDecimal((result[key].data[i].amount || 0),3),w.toDecimal((result[key].data[i].multipleWarehouse || 0),3),w.toDecimal((result[key].data[i].shortPosition || 0),3),w.toDecimal((result[key].data[i].multipleAvg || 0),3),w.toDecimal((result[key].data[i].shortAvg || 0),3)));
+                source.push('</tr>');
             }
         }
         $('#report').html(source.join('')); 
@@ -403,8 +376,8 @@
     //分页页码
     function flexiGridInited(options) {
         var newParams = [
-                { name:"type", value: w.getQueryStringValue('type') },
-                { name:"planLogId",value: w.getQueryStringValue('planLogId') }
+            { name:"type", value: w.getQueryStringValue('type') },
+            { name:"planLogId",value: w.getQueryStringValue('planLogId') }
         ]
         $("#FlexiGrid_ContentTable").setNewExtParam(newParams);
 
@@ -524,7 +497,7 @@
         }
 
         if(!t){
-            t = { site:site, symbol:coinsPair, amount: 0, middle: 0,multipleWarehouse: 0, shortPosition: 0 ,duojj:0,kongjj:0} //profit: 0,
+            t = { site:site, symbol:coinsPair, amount: 0, avgPrice: 0,multipleWarehouse: 0, shortPosition: 0, multipleAvg: 0, shortAvg: 0} //profit: 0,
             _symbolAmounts.push(t);
         }
         return t;  
