--- a/public/templates/admin/trade.html
+++ b/public/templates/admin/trade.html
@@ -105,9 +105,9 @@
     
     $(function () {
         showReports();
-        // setInterval(function(){
-        //     $("#FlexiGrid_ContentTable").flexReload();
-        // },3000)
+        setInterval(function(){
+            $("#FlexiGrid_ContentTable").flexReload();
+        },3000)
 
         // setInterval(quotation(),5000);
         $("#datetimeStart").datetimepicker({
@@ -279,6 +279,7 @@
         
         var amount; //总成交量
         var avgPrice = 0; //均价
+        var avgPrice1 = 0;
 
         //var avgPrice = 0;//
 
@@ -295,18 +296,20 @@
             
             //total总价 / sum数量
             avgPrice = _bargainAmountSum[i].total/_bargainAmountSum[i].sum;
+            avgPrice1 = (_bargainAmountSum[i]._id.side=="buy"?avgPrice:-avgPrice);
 
             var symbolItem = getItem(_bargainAmountSum[i]._id.site,_bargainAmountSum[i]._id.symbol,_symbolAmounts); 
             symbolItem.amount += amount;
+            
+            symbolItem.avgPrice += avgPrice1;
 
-            symbolItem.avgPrice = (_bargainAmountSum[i]._id.side=="buy"?avgPrice:-avgPrice);
 
             if(amount > 0 ){
                 symbolItem.multipleWarehouse += amount;
-                symbolItem.multipleAvg = avgPrice;
+                symbolItem.multipleAvg += avgPrice1;
             } else { 
                 symbolItem.shortPosition += amount;
-                symbolItem.shortAvg = avgPrice;
+                symbolItem.shortAvg += avgPrice1;
             }
         }
 
@@ -325,11 +328,18 @@
             var multipleWarehouse = 0;
             var shortPosition =0;
 
+            var min = 0;
+            var multipleAvg = 0;
+            var shortAvg = 0;
+
+
             result[arr[i]] = {
                 amount: 0,
                 multipleWarehouse : 0,
                 shortPosition : 0,
                 profit : 0,
+                multipleAvg: 0,
+                shortAvg: 0,
                 data : []
             };
             
@@ -338,15 +348,17 @@
                     amount += _symbolAmounts[j].amount;
                     multipleWarehouse += _symbolAmounts[j].multipleWarehouse;
                     shortPosition +=  _symbolAmounts[j].shortPosition;
-                    profit +=  _symbolAmounts[j].avgPrice; 
+                    multipleAvg += _symbolAmounts[j].multipleAvg;
+                    shortAvg += _symbolAmounts[j].shortAvg;
+                    profit =  multipleAvg+shortAvg; 
 
-                    var min = 0;
-                    
-                        min = (Math.min(Math.abs(multipleWarehouse),Math.abs(shortPosition))) * profit;
+                    min = (Math.min(Math.abs(multipleWarehouse),Math.abs(shortPosition))) * profit;
 
                     result[arr[i]].amount = amount;
                     result[arr[i]].multipleWarehouse = multipleWarehouse;
                     result[arr[i]].shortPosition = shortPosition;
+                    result[arr[i]].multipleAvg = multipleAvg;
+                    result[arr[i]].shortAvg =shortAvg;
                     result[arr[i]].profit = min;
 
                     result[arr[i]].data.push(_symbolAmounts[j]);
