--- a/public/templates/admin/trade.html
+++ b/public/templates/admin/trade.html
@@ -281,8 +281,6 @@
         var avgPrice = 0; //均价
         var avgPrice1 = 0;
 
-        //var avgPrice = 0;//
-
         var multipleWarehouse = 0; //多仓
         var shortPosition = 0; //空仓
         var _symbolAmounts = [];// { site:site, symbol:coinsPair, amount: 0, avgPrice: 0,multipleWarehouse: 0, shortPosition: 0, multipleAvg: 0, shortAvg: 0}
@@ -296,20 +294,20 @@
             
             //total总价 / sum数量
             avgPrice = _bargainAmountSum[i].total/_bargainAmountSum[i].sum;
-            avgPrice1 = (_bargainAmountSum[i]._id.side=="buy"?avgPrice:-avgPrice);
+            //avgPrice1 = (_bargainAmountSum[i]._id.side=="buy"?avgPrice:-avgPrice);
 
             var symbolItem = getItem(_bargainAmountSum[i]._id.site,_bargainAmountSum[i]._id.symbol,_symbolAmounts); 
             symbolItem.amount += amount;
             
-            symbolItem.avgPrice += avgPrice1;
+            //symbolItem.avgPrice += avgPrice1;
 
 
             if(amount > 0 ){
                 symbolItem.multipleWarehouse += amount;
-                symbolItem.multipleAvg += avgPrice1;
+                symbolItem.multipleAvg += avgPrice;
             } else { 
                 symbolItem.shortPosition += amount;
-                symbolItem.shortAvg += avgPrice1;
+                symbolItem.shortAvg += avgPrice;
             }
         }
 
@@ -329,8 +327,11 @@
             var shortPosition =0;
 
             var min = 0;
-            var multipleAvg = 0;
-            var shortAvg = 0;
+            var multipleAll = 0;
+            var shortAll = 0;
+
+            var a = 0;
+            var b = 0;
 
 
             result[arr[i]] = {
@@ -338,8 +339,10 @@
                 multipleWarehouse : 0,
                 shortPosition : 0,
                 profit : 0,
-                multipleAvg: 0,
-                shortAvg: 0,
+
+                multipleAll: 0,//多仓总价
+                shortAll: 0,//空仓总价
+
                 data : []
             };
             
@@ -348,18 +351,37 @@
                     amount += _symbolAmounts[j].amount;
                     multipleWarehouse += _symbolAmounts[j].multipleWarehouse;
                     shortPosition +=  _symbolAmounts[j].shortPosition;
-                    multipleAvg += _symbolAmounts[j].multipleAvg;
-                    shortAvg += _symbolAmounts[j].shortAvg;
-                    profit =  multipleAvg+shortAvg; 
 
-                    min = (Math.min(Math.abs(multipleWarehouse),Math.abs(shortPosition))) * profit;
+
+                    // multipleAvg += _symbolAmounts[j].multipleAvg;
+                    // shortAvg += _symbolAmounts[j].shortAvg;
+                    //profit
+                    
+                    multipleAll += (_symbolAmounts[j].multipleAvg * _symbolAmounts[j].multipleWarehouse);
+                    console.log(multipleAll) ;
+
+                    a = multipleAll / multipleWarehouse;
+                    console.log(a) ;
+
+                    shortAll += (_symbolAmounts[j].shortAvg * _symbolAmounts[j].shortPosition) ;
+
+                    b = -(shortAll / shortPosition);
+                    console.log(b) ;
+                    
+                    profit = (a+b) * (Math.min(Math.abs(multipleWarehouse),Math.abs(shortPosition)))
+                    
+                    
+                    
+                    //+ _symbolAmounts[j].shortAvg * _symbolAmounts[j].shortPosition)/(_symbolAmounts[j].multipleWarehouse+_symbolAmounts[j].shortPosition); 
+
+                    //min = (Math.min(Math.abs(multipleWarehouse),Math.abs(shortPosition))) * profit;
 
                     result[arr[i]].amount = amount;
                     result[arr[i]].multipleWarehouse = multipleWarehouse;
                     result[arr[i]].shortPosition = shortPosition;
                     result[arr[i]].multipleAvg = multipleAvg;
-                    result[arr[i]].shortAvg =shortAvg;
-                    result[arr[i]].profit = min;
+                    result[arr[i]].shortAvg = shortAvg;
+                    result[arr[i]].profit = profit;
 
                     result[arr[i]].data.push(_symbolAmounts[j]);
                 }
@@ -509,7 +531,7 @@
         }
 
         if(!t){
-            t = { site:site, symbol:coinsPair, amount: 0, avgPrice: 0,multipleWarehouse: 0, shortPosition: 0, multipleAvg: 0, shortAvg: 0} //profit: 0,
+            t = { site:site, symbol:coinsPair, amount: 0, multipleWarehouse: 0, shortPosition: 0, multipleAvg: 0, shortAvg: 0} //profit: 0,avgPrice: 0,
             _symbolAmounts.push(t);
         }
         return t;  
